<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/devices_vcom"
                    android:textSize="@dimen/common_text_size" />

                <TextView
                    style="@style/text_style"
                    android:id="@+id/devices_vcom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="@dimen/common_text_size" />

            </LinearLayout>

            <TextView
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/set_vcom"
                android:textSize="@dimen/common_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:focusable="false">

                <EditText
                    android:padding="1dp"
                    android:id="@+id/vcom_text"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:maxLength="3"
                    android:inputType="number" />

                <Button
                    android:id="@+id/set"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/set"
                    android:textSize="@dimen/common_text_size" />
            </LinearLayout>
       </LinearLayout>
</layout>